Bug corrections
- Scrolling now possible on too tall modal windows
- Stretched picture when using iOS < 9 on megapixel images
- various tiny enhancements

--- a/webapp/app/styles/bcvs.css
+++ b/webapp/app/styles/bcvs.css
@@ -3,7 +3,6 @@ body{
 }
 
 .main{
-    overflow: hidden;
 }
 
 .header, .toolbarview{
