--- a/webapp/app/styles/main.scss
+++ b/webapp/app/styles/main.scss
@@ -1,8 +1,3 @@
-@mixin background-opacity($color, $opacity: 1) {
-    background: $color; /* The Fallback */
-    background: rgba($color, $opacity);
-}
-
 canvas {
 	-ms-touch-action: none;
 	/*display: block;
@@ -10,7 +5,6 @@ canvas {
 }
 
 .m-page-1 .content-wrapper {
-	overflow: hidden;
 }
 
 .page-draw {
